Update `.gitignore` to include additional entries for temporary files and system artifacts. This change enhances project cleanliness by ignoring Spark and Dask temporary files, Jupyter notebook outputs, IDE-specific files, and various system files. The updated `.gitignore` promotes better organization and prevents unnecessary clutter in the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -170,5 +170,38 @@ cython_debug/
 # PyPI configuration file
 .pypirc
 
-# Data files
-*.csv
+# Keep data files and results for study tracking
+
+# Spark temporary files
+spark-warehouse/
+.spark/
+metastore_db/
+derby.log
+
+# Dask temporary files
+dask-worker-space/
+.dask/
+
+# Jupyter notebook outputs
+*.ipynb_checkpoints
+
+# System files
+.DS_Store
+Thumbs.db
+*.tmp
+*.swp
+*~
+
+# IDE files
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# OS files
+.directory
+.Trash-*
+
+# Performance profiling
+*.prof
+*.pstats
