Enhance project documentation and data extraction capabilities
- Updated `.gitignore` to exclude the `custom_1988_2020.csv` dataset, ensuring local management of large files.
- Revised `CLAUDE.md` and `README.md` to emphasize the use of real-world data from the `custom_1988_2020.csv` for benchmarking, highlighting its significance for credible performance metrics.
- Introduced `extract_real_world_datasets.py` script to automate the extraction of dataset subsets (1M, 5M, 10M, 50M, 100M rows) from the original dataset, streamlining the benchmarking process.
- Enhanced documentation to guide users on utilizing real-world data for performance testing, reinforcing the project's focus on practical applications.

--- a/.gitignore
+++ b/.gitignore
@@ -173,6 +173,7 @@ cython_debug/
 .pypirc
 
 # Large CSV data files (keep local, exclude from Git)
+custom_1988_2020.csv
 data/benchmark_100m.csv
 data/benchmark_50m.csv
 data/benchmark_10m.csv
