Add benchmark datasets via Git LFS
- Add benchmark_5m.csv (189 MB) via Git LFS
- Add benchmark_10m.csv (379 MB) via Git LFS
- Update .gitignore to allow these files
- Configure .gitattributes for LFS tracking

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 *.csv filter=lfs diff=lfs merge=lfs -text
 *.parquet filter=lfs diff=lfs merge=lfs -text
+data/benchmark_5m.csv filter=lfs diff=lfs merge=lfs -text
+data/benchmark_10m.csv filter=lfs diff=lfs merge=lfs -text
